Bug 206898 - export docbook or xhtml fails to prompt user for name
Summary: export docbook or xhtml fails to prompt user for name
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.16 (KDE Applications 15.04)
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-09 20:35 UTC by Dennis
Modified: 2015-06-19 06:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.16.3 (KDE Applications 15.04.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis 2009-09-09 20:35:27 UTC
Version:            (using KDE 4.3.1)
OS:                Linux
Installed from:    Ubuntu Packages

There is no indication of whether or not the export of xhtml was successful nor does it prompt the user for where it should be saved.

Video: http://www.youtube.com/watch?v=d22P3LIWJt8
Comment 1 Ralf Habacker 2015-06-19 06:33:45 UTC
(In reply to Dennis from comment #0)
> Version:            (using KDE 4.3.1)
> OS:                Linux
> Installed from:    Ubuntu Packages
> 
> There is no indication of whether or not the export of xhtml was successful
bug 1 only possible to fix in 15.04 branch with special exception from the kde-i18n team.

> nor does it prompt the user for where it should be saved.
bug 2 targeted for 15.04
Comment 2 Ralf Habacker 2015-06-19 06:38:49 UTC
(In reply to Ralf Habacker from comment #1)
> (In reply to Dennis from comment #0)
> > Version:            (using KDE 4.3.1)
> > OS:                Linux
> > Installed from:    Ubuntu Packages
> > 
> > There is no indication of whether or not the export of xhtml was successful
> bug 1 only possible to fix in 15.04 branch with special exception from the
> kde-i18n team.
> 
> > nor does it prompt the user for where it should be saved.
> bug 2 targeted for 15.04

also for docbook export
Comment 3 Ralf Habacker 2015-06-19 06:54:38 UTC
Git commit eb4a0585fe942f3a3882694e05499d229fe3aa0b by Ralf Habacker.
Committed on 19/06/2015 at 06:54.
Pushed by habacker into branch 'Applications/15.04'.

Fix 'Export docbook or xhtml fails to prompt user for name'.
FIXED-IN: 2.16.3 (KDE Applications 15.04.3)

M  +15   -7    umbrello/uml.cpp

http://commits.kde.org/umbrello/eb4a0585fe942f3a3882694e05499d229fe3aa0b