Fix 'Export docbook or xhtml fails to prompt user for name'.

BUG:206898
FIXED-IN: 2.16.3 (KDE Applications 15.04.3)